[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/fonts/upheaval/upheavtt.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Menus/ResearchScreen.gd" type="Script" id=2]
[ext_resource path="res://Menus/TitleTheme.tres" type="Theme" id=3]
[ext_resource path="res://Menus/MenuTheme.tres" type="Theme" id=4]
[ext_resource path="res://Menus/ResearchTheme.tres" type="Theme" id=5]
[ext_resource path="res://Menus/LockedTheme.tres" type="Theme" id=6]
[ext_resource path="res://Menus/weaponTheme.tres" type="Theme" id=7]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 22.0
margin_bottom = 21.0
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 649.0
margin_bottom = 374.0
color = Color( 0.729412, 0.745098, 0.964706, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = 6.0
margin_top = 49.0
margin_right = 632.0
margin_bottom = 253.0
color = Color( 0.533333, 0.603922, 0.870588, 1 )

[node name="ColorRect3" type="ColorRect" parent="."]
margin_left = 6.0
margin_top = 278.0
margin_right = 368.0
margin_bottom = 356.0
color = Color( 0.533333, 0.603922, 0.870588, 1 )

[node name="Title" type="RichTextLabel" parent="."]
margin_left = 13.0
margin_top = 3.0
margin_right = 261.0
margin_bottom = 55.0
rect_clip_content = false
theme = ExtResource( 3 )
text = "RESEACH"

[node name="Inventory" type="Control" parent="."]
margin_left = 1.0
margin_top = 187.0
margin_right = 356.0
margin_bottom = 258.0
__meta__ = {
"_edit_lock_": true
}

[node name="SkinCurrency" type="Control" parent="Inventory"]
margin_left = 14.0
margin_top = 44.0
margin_right = 205.0
margin_bottom = 88.0
theme = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="count" type="RichTextLabel" parent="Inventory/SkinCurrency"]
modulate = Color( 0.207843, 0.352941, 0.741176, 1 )
margin_left = 65.0
margin_top = -5.0
margin_right = 129.0
margin_bottom = 47.0
rect_clip_content = false
text = "0"
scroll_active = false
__meta__ = {
"_edit_lock_": true
}

[node name="text" type="RichTextLabel" parent="Inventory/SkinCurrency"]
margin_left = 1.0
margin_top = -5.0
margin_right = 204.0
margin_bottom = 47.0
rect_clip_content = false
text = "SKIN:"
scroll_active = false
__meta__ = {
"_edit_lock_": true
}

[node name="TailCurrency" type="Control" parent="Inventory"]
margin_left = 111.0
margin_top = 44.0
margin_right = 302.0
margin_bottom = 88.0
theme = ExtResource( 5 )

[node name="count" type="RichTextLabel" parent="Inventory/TailCurrency"]
modulate = Color( 0.207843, 0.352941, 0.741176, 1 )
margin_left = 65.0
margin_top = -5.0
margin_right = 129.0
margin_bottom = 47.0
rect_clip_content = false
text = "0"
scroll_active = false
__meta__ = {
"_edit_lock_": true
}

[node name="text" type="RichTextLabel" parent="Inventory/TailCurrency"]
margin_left = 1.0
margin_top = -5.0
margin_right = 204.0
margin_bottom = 47.0
rect_clip_content = false
text = "TAILS:"
scroll_active = false
__meta__ = {
"_edit_lock_": true
}

[node name="LungCurrency" type="Control" parent="Inventory"]
margin_left = 209.0
margin_top = 44.0
margin_right = 400.0
margin_bottom = 88.0
theme = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="count" type="RichTextLabel" parent="Inventory/LungCurrency"]
modulate = Color( 0.207843, 0.352941, 0.741176, 1 )
margin_left = 65.0
margin_top = -5.0
margin_right = 129.0
margin_bottom = 47.0
rect_clip_content = false
text = "0"
scroll_active = false
__meta__ = {
"_edit_lock_": true
}

[node name="text" type="RichTextLabel" parent="Inventory/LungCurrency"]
margin_left = 1.0
margin_top = -5.0
margin_right = 204.0
margin_bottom = 47.0
rect_clip_content = false
text = "LUNGS:"
scroll_active = false
__meta__ = {
"_edit_lock_": true
}

[node name="HeartCurrency" type="Control" parent="Inventory"]
visible = false
margin_left = 106.0
margin_top = 80.0
margin_right = 297.0
margin_bottom = 124.0
theme = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="count" type="RichTextLabel" parent="Inventory/HeartCurrency"]
modulate = Color( 0.207843, 0.352941, 0.741176, 1 )
margin_left = 65.0
margin_top = -5.0
margin_right = 129.0
margin_bottom = 47.0
rect_clip_content = false
text = "0"
scroll_active = false
__meta__ = {
"_edit_lock_": true
}

[node name="text" type="RichTextLabel" parent="Inventory/HeartCurrency"]
margin_left = 1.0
margin_top = -5.0
margin_right = 204.0
margin_bottom = 47.0
rect_clip_content = false
text = "HEART:"
scroll_active = false
__meta__ = {
"_edit_lock_": true
}

[node name="title" type="RichTextLabel" parent="Inventory"]
margin_left = 18.0
margin_top = 5.0
margin_right = 196.0
margin_bottom = 45.0
rect_clip_content = false
theme = ExtResource( 4 )
text = "Inventory"
__meta__ = {
"_edit_lock_": true
}

[node name="Stat Upgrades" type="Control" parent="."]
visible = false
margin_left = 12.0
margin_top = 53.0
margin_right = 252.0
margin_bottom = 212.0
__meta__ = {
"_edit_lock_": true
}

[node name="Stat Title" type="RichTextLabel" parent="Stat Upgrades"]
margin_right = 235.0
margin_bottom = 40.0
rect_clip_content = false
theme = ExtResource( 4 )
text = "Stat Upgrades"
__meta__ = {
"_edit_lock_": true
}

[node name="HealthUpgrade" type="Control" parent="Stat Upgrades"]
margin_left = 13.0
margin_top = 41.0
margin_right = 236.0
margin_bottom = 77.0
theme = ExtResource( 5 )

[node name="statLabel" type="RichTextLabel" parent="Stat Upgrades/HealthUpgrade"]
margin_right = 64.0
margin_bottom = 18.0
rect_clip_content = false
text = "Health"
__meta__ = {
"_edit_lock_": true
}

[node name="levelLabel" type="RichTextLabel" parent="Stat Upgrades/HealthUpgrade"]
modulate = Color( 0.227451, 0.470588, 0.266667, 1 )
margin_left = 69.0
margin_right = 92.0
margin_bottom = 16.0
rect_clip_content = false
theme = ExtResource( 6 )
text = "Lv"
__meta__ = {
"_edit_lock_": true
}

[node name="currentLevel" type="RichTextLabel" parent="Stat Upgrades/HealthUpgrade"]
modulate = Color( 0.227451, 0.470588, 0.266667, 1 )
margin_left = 93.0
margin_right = 137.0
margin_bottom = 16.0
rect_clip_content = false
theme = ExtResource( 6 )
text = "0"
__meta__ = {
"_edit_lock_": true
}

[node name="costLabel" type="RichTextLabel" parent="Stat Upgrades/HealthUpgrade"]
margin_left = 111.0
margin_right = 186.0
margin_bottom = 16.0
rect_clip_content = false
text = "Cost:"
__meta__ = {
"_edit_lock_": true
}

[node name="currencyLabel" type="RichTextLabel" parent="Stat Upgrades/HealthUpgrade"]
margin_left = 193.0
margin_right = 256.0
margin_bottom = 16.0
rect_clip_content = false
text = "skin"
__meta__ = {
"_edit_lock_": true
}

[node name="cost" type="RichTextLabel" parent="Stat Upgrades/HealthUpgrade"]
margin_left = 159.0
margin_top = -1.0
margin_right = 189.0
margin_bottom = 15.0
rect_clip_content = false
text = "0"
__meta__ = {
"_edit_lock_": true
}

[node name="Button" type="Button" parent="Stat Upgrades/HealthUpgrade"]
margin_left = 255.0
margin_top = -2.0
margin_right = 347.0
margin_bottom = 19.0
text = "purchase"

[node name="SpeedUpgrade" type="Control" parent="Stat Upgrades"]
margin_left = 13.0
margin_top = 67.0
margin_right = 236.0
margin_bottom = 103.0
theme = ExtResource( 5 )

[node name="statLabel" type="RichTextLabel" parent="Stat Upgrades/SpeedUpgrade"]
margin_right = 64.0
margin_bottom = 18.0
rect_clip_content = false
text = "Speed"
__meta__ = {
"_edit_lock_": true
}

[node name="levelLabel" type="RichTextLabel" parent="Stat Upgrades/SpeedUpgrade"]
modulate = Color( 0.227451, 0.470588, 0.266667, 1 )
margin_left = 69.0
margin_right = 92.0
margin_bottom = 16.0
rect_clip_content = false
theme = ExtResource( 6 )
text = "Lv"
__meta__ = {
"_edit_lock_": true
}

[node name="currentLevel" type="RichTextLabel" parent="Stat Upgrades/SpeedUpgrade"]
modulate = Color( 0.227451, 0.470588, 0.266667, 1 )
margin_left = 93.0
margin_right = 137.0
margin_bottom = 16.0
rect_clip_content = false
theme = ExtResource( 6 )
text = "0"
__meta__ = {
"_edit_lock_": true
}

[node name="costLabel" type="RichTextLabel" parent="Stat Upgrades/SpeedUpgrade"]
margin_left = 111.0
margin_right = 186.0
margin_bottom = 16.0
rect_clip_content = false
text = "Cost:"
__meta__ = {
"_edit_lock_": true
}

[node name="currencyLabel" type="RichTextLabel" parent="Stat Upgrades/SpeedUpgrade"]
margin_left = 193.0
margin_right = 256.0
margin_bottom = 16.0
rect_clip_content = false
text = "Lungs"
__meta__ = {
"_edit_lock_": true
}

[node name="cost" type="RichTextLabel" parent="Stat Upgrades/SpeedUpgrade"]
margin_left = 159.0
margin_top = -1.0
margin_right = 187.0
margin_bottom = 15.0
rect_clip_content = false
text = "0"
__meta__ = {
"_edit_lock_": true
}

[node name="Button" type="Button" parent="Stat Upgrades/SpeedUpgrade"]
margin_left = 255.0
margin_top = -2.0
margin_right = 347.0
margin_bottom = 19.0
text = "purchase"

[node name="DashUpgrade" type="Control" parent="Stat Upgrades"]
margin_left = 13.0
margin_top = 96.0
margin_right = 236.0
margin_bottom = 132.0
theme = ExtResource( 5 )

[node name="statLabel" type="RichTextLabel" parent="Stat Upgrades/DashUpgrade"]
margin_right = 64.0
margin_bottom = 18.0
rect_clip_content = false
text = "Dash"
__meta__ = {
"_edit_lock_": true
}

[node name="levelLabel" type="RichTextLabel" parent="Stat Upgrades/DashUpgrade"]
modulate = Color( 0.227451, 0.470588, 0.266667, 1 )
margin_left = 69.0
margin_right = 92.0
margin_bottom = 16.0
rect_clip_content = false
theme = ExtResource( 6 )
text = "Lv"
__meta__ = {
"_edit_lock_": true
}

[node name="currentLevel" type="RichTextLabel" parent="Stat Upgrades/DashUpgrade"]
modulate = Color( 0.227451, 0.470588, 0.266667, 1 )
margin_left = 93.0
margin_right = 137.0
margin_bottom = 16.0
rect_clip_content = false
theme = ExtResource( 6 )
text = "0"
__meta__ = {
"_edit_lock_": true
}

[node name="costLabel" type="RichTextLabel" parent="Stat Upgrades/DashUpgrade"]
margin_left = 111.0
margin_right = 186.0
margin_bottom = 16.0
rect_clip_content = false
text = "Cost:"
__meta__ = {
"_edit_lock_": true
}

[node name="currencyLabel" type="RichTextLabel" parent="Stat Upgrades/DashUpgrade"]
margin_left = 193.0
margin_right = 256.0
margin_bottom = 16.0
rect_clip_content = false
text = "Tails"
__meta__ = {
"_edit_lock_": true
}

[node name="cost" type="RichTextLabel" parent="Stat Upgrades/DashUpgrade"]
margin_left = 159.0
margin_top = -1.0
margin_right = 190.0
margin_bottom = 15.0
rect_clip_content = false
text = "0"
__meta__ = {
"_edit_lock_": true
}

[node name="Button" type="Button" parent="Stat Upgrades/DashUpgrade"]
margin_left = 255.0
margin_top = -2.0
margin_right = 347.0
margin_bottom = 19.0
text = "purchase"

[node name="Weapon Upgrades" type="Control" parent="."]
margin_left = 12.0
margin_top = 53.0
margin_right = 540.0
margin_bottom = 177.0
__meta__ = {
"_edit_lock_": true
}

[node name="Weapon Title" type="RichTextLabel" parent="Weapon Upgrades"]
margin_right = 331.0
margin_bottom = 40.0
rect_clip_content = false
theme = ExtResource( 4 )
text = "Weapon Upgrades"
__meta__ = {
"_edit_lock_": true
}

[node name="ScalpelGun" type="Control" parent="Weapon Upgrades"]
margin_left = 24.0
margin_top = 40.0
margin_right = 247.0
margin_bottom = 76.0
theme = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="Weapon Name" type="RichTextLabel" parent="Weapon Upgrades/ScalpelGun"]
margin_left = -23.0
margin_top = -5.0
margin_right = 108.0
margin_bottom = 18.0
rect_clip_content = false
theme = ExtResource( 7 )
text = "Scalpel"

[node name="lockedLabel" type="RichTextLabel" parent="Weapon Upgrades/ScalpelGun"]
modulate = Color( 0.647059, 0.184314, 0.188235, 1 )
margin_left = 77.0
margin_right = 149.0
margin_bottom = 17.0
rect_clip_content = false
theme = ExtResource( 6 )
text = "locked"
__meta__ = {
"_edit_lock_": true
}

[node name="levelLabel" type="RichTextLabel" parent="Weapon Upgrades/ScalpelGun"]
visible = false
modulate = Color( 0.227451, 0.470588, 0.266667, 1 )
margin_left = 77.0
margin_right = 100.0
margin_bottom = 16.0
rect_clip_content = false
theme = ExtResource( 6 )
text = "Lv"
__meta__ = {
"_edit_lock_": true
}

[node name="currentLevel" type="RichTextLabel" parent="Weapon Upgrades/ScalpelGun"]
visible = false
modulate = Color( 0.227451, 0.470588, 0.266667, 1 )
margin_left = 100.0
margin_right = 144.0
margin_bottom = 16.0
rect_clip_content = false
theme = ExtResource( 6 )
text = "0"
__meta__ = {
"_edit_lock_": true
}

[node name="costLabel" type="RichTextLabel" parent="Weapon Upgrades/ScalpelGun"]
margin_left = 149.0
margin_right = 224.0
margin_bottom = 17.0
rect_clip_content = false
text = "Cost:"
__meta__ = {
"_edit_lock_": true
}

[node name="currencyLabel" type="RichTextLabel" parent="Weapon Upgrades/ScalpelGun"]
margin_left = 226.0
margin_right = 289.0
margin_bottom = 16.0
rect_clip_content = false
text = "tails"
__meta__ = {
"_edit_lock_": true
}

[node name="cost" type="RichTextLabel" parent="Weapon Upgrades/ScalpelGun"]
margin_left = 197.0
margin_right = 227.0
margin_bottom = 16.0
rect_clip_content = false
text = "0"
__meta__ = {
"_edit_lock_": true
}

[node name="buyButton" type="Button" parent="Weapon Upgrades/ScalpelGun"]
margin_left = 287.0
margin_top = -1.0
margin_right = 379.0
margin_bottom = 20.0
text = "purchase"
__meta__ = {
"_edit_lock_": true
}

[node name="equip" type="Button" parent="Weapon Upgrades/ScalpelGun"]
margin_left = 392.0
margin_top = -1.0
margin_right = 484.0
margin_bottom = 20.0
disabled = true
text = "equip"
__meta__ = {
"_edit_lock_": true
}

[node name="SlimeGun" type="Control" parent="Weapon Upgrades"]
margin_left = 25.0
margin_top = 68.0
margin_right = 248.0
margin_bottom = 104.0
theme = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="Weapon Name" type="RichTextLabel" parent="Weapon Upgrades/SlimeGun"]
margin_left = -25.0
margin_top = -5.0
margin_right = 94.0
margin_bottom = 18.0
rect_clip_content = false
theme = ExtResource( 7 )
text = "Slime Gun"

[node name="lockedLabel" type="RichTextLabel" parent="Weapon Upgrades/SlimeGun"]
modulate = Color( 0.647059, 0.184314, 0.188235, 1 )
margin_left = 77.0
margin_right = 149.0
margin_bottom = 17.0
rect_clip_content = false
theme = ExtResource( 6 )
text = "locked"
__meta__ = {
"_edit_lock_": true
}

[node name="levelLabel" type="RichTextLabel" parent="Weapon Upgrades/SlimeGun"]
visible = false
modulate = Color( 0.227451, 0.470588, 0.266667, 1 )
margin_left = 77.0
margin_right = 100.0
margin_bottom = 16.0
rect_clip_content = false
theme = ExtResource( 6 )
text = "Lv"
__meta__ = {
"_edit_lock_": true
}

[node name="currentLevel" type="RichTextLabel" parent="Weapon Upgrades/SlimeGun"]
visible = false
modulate = Color( 0.227451, 0.470588, 0.266667, 1 )
margin_left = 100.0
margin_right = 144.0
margin_bottom = 16.0
rect_clip_content = false
theme = ExtResource( 6 )
text = "0"
__meta__ = {
"_edit_lock_": true
}

[node name="costLabel" type="RichTextLabel" parent="Weapon Upgrades/SlimeGun"]
margin_left = 149.0
margin_right = 224.0
margin_bottom = 17.0
rect_clip_content = false
text = "Cost:"
__meta__ = {
"_edit_lock_": true
}

[node name="currencyLabel" type="RichTextLabel" parent="Weapon Upgrades/SlimeGun"]
margin_left = 226.0
margin_right = 289.0
margin_bottom = 16.0
rect_clip_content = false
text = "skin"
__meta__ = {
"_edit_lock_": true
}

[node name="cost" type="RichTextLabel" parent="Weapon Upgrades/SlimeGun"]
margin_left = 197.0
margin_right = 227.0
margin_bottom = 16.0
rect_clip_content = false
text = "0"
__meta__ = {
"_edit_lock_": true
}

[node name="buyButton" type="Button" parent="Weapon Upgrades/SlimeGun"]
margin_left = 287.0
margin_top = -1.0
margin_right = 379.0
margin_bottom = 20.0
text = "purchase"
__meta__ = {
"_edit_lock_": true
}

[node name="equip" type="Button" parent="Weapon Upgrades/SlimeGun"]
margin_left = 392.0
margin_top = -1.0
margin_right = 484.0
margin_bottom = 20.0
text = "equip"
__meta__ = {
"_edit_lock_": true
}

[node name="BlowGun" type="Control" parent="Weapon Upgrades"]
margin_left = 26.0
margin_top = 97.0
margin_right = 249.0
margin_bottom = 133.0
theme = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="Weapon Name" type="RichTextLabel" parent="Weapon Upgrades/BlowGun"]
margin_left = -25.0
margin_top = -5.0
margin_right = 81.0
margin_bottom = 20.0
rect_clip_content = false
theme = ExtResource( 7 )
text = "Blow Gun"

[node name="lockedLabel" type="RichTextLabel" parent="Weapon Upgrades/BlowGun"]
modulate = Color( 0.647059, 0.184314, 0.188235, 1 )
margin_left = 77.0
margin_right = 149.0
margin_bottom = 17.0
rect_clip_content = false
theme = ExtResource( 6 )
text = "locked"
__meta__ = {
"_edit_lock_": true
}

[node name="levelLabel" type="RichTextLabel" parent="Weapon Upgrades/BlowGun"]
visible = false
modulate = Color( 0.227451, 0.470588, 0.266667, 1 )
margin_left = 77.0
margin_right = 100.0
margin_bottom = 16.0
rect_clip_content = false
theme = ExtResource( 6 )
text = "Lv"
__meta__ = {
"_edit_lock_": true
}

[node name="currentLevel" type="RichTextLabel" parent="Weapon Upgrades/BlowGun"]
visible = false
modulate = Color( 0.227451, 0.470588, 0.266667, 1 )
margin_left = 100.0
margin_right = 144.0
margin_bottom = 16.0
rect_clip_content = false
theme = ExtResource( 6 )
text = "0"
__meta__ = {
"_edit_lock_": true
}

[node name="costLabel" type="RichTextLabel" parent="Weapon Upgrades/BlowGun"]
margin_left = 149.0
margin_right = 224.0
margin_bottom = 17.0
rect_clip_content = false
text = "Cost:"
__meta__ = {
"_edit_lock_": true
}

[node name="currencyLabel" type="RichTextLabel" parent="Weapon Upgrades/BlowGun"]
margin_left = 226.0
margin_right = 289.0
margin_bottom = 16.0
rect_clip_content = false
text = "lungs"
__meta__ = {
"_edit_lock_": true
}

[node name="cost" type="RichTextLabel" parent="Weapon Upgrades/BlowGun"]
margin_left = 197.0
margin_right = 227.0
margin_bottom = 16.0
rect_clip_content = false
text = "0"
__meta__ = {
"_edit_lock_": true
}

[node name="buyButton" type="Button" parent="Weapon Upgrades/BlowGun"]
margin_left = 287.0
margin_top = -1.0
margin_right = 379.0
margin_bottom = 20.0
text = "purchase"
__meta__ = {
"_edit_lock_": true
}

[node name="equip" type="Button" parent="Weapon Upgrades/BlowGun"]
margin_left = 392.0
margin_top = -1.0
margin_right = 484.0
margin_bottom = 20.0
text = "equip"
__meta__ = {
"_edit_lock_": true
}

[node name="EnterDungeonButton" type="Button" parent="."]
margin_left = 395.0
margin_top = 321.0
margin_right = 633.0
margin_bottom = 355.0
theme = SubResource( 2 )
text = "Enter Dungeon"

[node name="SwapButton" type="Button" parent="."]
margin_left = 434.0
margin_top = 212.0
margin_right = 622.0
margin_bottom = 245.0
theme = ExtResource( 5 )
text = "Swap to stat screen"

[node name="Equipped" type="Control" parent="."]
margin_left = 442.0
margin_top = 190.0
margin_right = 620.0
margin_bottom = 207.0
theme = ExtResource( 5 )

[node name="Label" type="RichTextLabel" parent="Equipped"]
margin_right = 83.0
margin_bottom = 20.0
rect_clip_content = false
text = "Equipped:"
__meta__ = {
"_edit_lock_": true
}

[node name="WeaponName" type="RichTextLabel" parent="Equipped"]
modulate = Color( 0.207843, 0.352941, 0.741176, 1 )
margin_left = 93.0
margin_right = 234.0
margin_bottom = 17.0
rect_clip_content = false
text = "Scalpel"
__meta__ = {
"_edit_lock_": true
}

[node name="Finish" type="Control" parent="."]
margin_left = 3.0
margin_top = 261.0
margin_right = 398.0
margin_bottom = 365.0
theme = ExtResource( 4 )

[node name="Button" type="Button" parent="Finish"]
margin_left = 8.0
margin_top = 24.0
margin_right = 356.0
margin_bottom = 58.0
text = "Do what must be done"

[node name="RichTextLabel" type="RichTextLabel" parent="Finish"]
margin_left = 8.0
margin_top = 62.0
margin_right = 284.0
margin_bottom = 95.0
rect_clip_content = false
text = "COST: 25 of Each"

[connection signal="pressed" from="Stat Upgrades/HealthUpgrade/Button" to="." method="_on_health_button_pressed"]
[connection signal="pressed" from="Stat Upgrades/SpeedUpgrade/Button" to="." method="_on_speed_button_pressed"]
[connection signal="pressed" from="Stat Upgrades/DashUpgrade/Button" to="." method="_on_dash_button_pressed"]
[connection signal="pressed" from="Weapon Upgrades/ScalpelGun/buyButton" to="." method="_on_scalpel_buyButton_pressed"]
[connection signal="pressed" from="Weapon Upgrades/ScalpelGun/equip" to="." method="_on_scalpel_equip_pressed"]
[connection signal="pressed" from="Weapon Upgrades/SlimeGun/buyButton" to="." method="_on_slimegun_buyButton_pressed"]
[connection signal="pressed" from="Weapon Upgrades/SlimeGun/equip" to="." method="_on_slime_equip_pressed"]
[connection signal="pressed" from="Weapon Upgrades/BlowGun/buyButton" to="." method="_on_blowgun_buyButton_pressed"]
[connection signal="pressed" from="Weapon Upgrades/BlowGun/equip" to="." method="_on_blowgun_equip_pressed"]
[connection signal="pressed" from="EnterDungeonButton" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="SwapButton" to="." method="_on_SwapButton_pressed"]
[connection signal="pressed" from="Finish/Button" to="." method="_on_finish_pressed"]
